--- a/Makefile.am
+++ b/Makefile.am
@@ -17,11 +17,14 @@ bin_PROGRAMS	= minerd
 
 minerd_SOURCES	= elist.h miner.h compat.h \
 		  cpu-miner.c util.c \
-		  x2/sha2.c x2/sha2-arm.S x2/sha2-x86.S x2/sha2-x64.S \
-		  x2/scrypt.c x2/scrypt-arm.S x2/scrypt-x86.S x2/scrypt-x64.S \
-		  x5/aes_helper.c x5/luffa_for_sse2.c x5/shavite.c x5/cubehash_sse2.c x5/vect128/nist.c x5/vect128/vector.c \
-		  x5/echo.c x6/blake.c x5/echo512/ccalik/aesni/hash.c \
-		  x6/groestl/aesni/hash-groestl.c xcoin.c
+		  x2/sha2.c \
+		  x2/scrypt.c \
+		  x11/blake.c	x11/echo.c	x11/keccak.c	x11/simd.c \
+		  x11/bmw.c	x11/groestl.c	x11/luffa.c	x11/skein.c \
+		  x11/cubehash.c	x11/jh.c	x11/shavite.c x11/aes_helper.c \
+		  x5/luffa_for_sse2.c x5/shavite.c x5/cubehash_sse2.c x5/vect128/nist.c x5/vect128/vector.c \
+		  x5/echo512/ccalik/aesni/hash.c \
+		  xcoin.c
 minerd_LDFLAGS	= $(PTHREAD_FLAGS)
 minerd_LDADD	= @LIBCURL@ @JANSSON_LIBS@ @PTHREAD_LIBS@ @WS2_LIBS@
 minerd_CPPFLAGS = @LIBCURL_CPPFLAGS@
